--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pratikbanik/ML-Heart-Disease-House-Price-Prediction/blob/main/Heart_Disease_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -54,7 +65,7 @@
       "metadata": {
         "id": "hUU0MT5-fxxY"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +91,7 @@
         "id": "eKP8wDADgDOV",
         "outputId": "95fb2cf4-d753-44aa-a95f-b8e47618d56f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +116,7 @@
         "id": "bMuSjovKgooK",
         "outputId": "24fc2954-dcba-4b03-c12e-8ef3e32ae194"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +496,7 @@
         "id": "JP97IGygg2oM",
         "outputId": "21efa0ba-1cad-41dc-904f-700a7548fa3d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +523,7 @@
         "id": "fWG3d0h7g8vi",
         "outputId": "d4755bc2-cf6f-454c-b29a-495c49b8b53d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +567,7 @@
         "id": "BFFQvcYahIn8",
         "outputId": "1aec4432-fe24-4546-e75e-abbd47a58ab5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +609,7 @@
         "id": "w5cBTUM9hSl8",
         "outputId": "e27bcd21-9d2e-4962-da1b-b4a205538d44"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1055,7 @@
         "id": "vO8mLPMAhcyy",
         "outputId": "61cb150b-96eb-4254-ebeb-18d46623f185"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,7 +1103,7 @@
         "id": "dhtLevlYifhD",
         "outputId": "dee84692-e36a-47ae-b73a-231f9527e15b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1426,7 +1437,7 @@
       "metadata": {
         "id": "O2cbo_sgivml"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1442,7 +1453,7 @@
         "id": "uR6Q6v-tjF4Y",
         "outputId": "5669997b-0f79-4dfa-fab8-30a1ce79cec8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1493,7 +1504,7 @@
         "id": "IeND1iR4jKgX",
         "outputId": "e0ca18b6-a1f4-483f-e9f2-761bb54c9913"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1542,7 +1553,7 @@
         "id": "iQigZfy6jW4U",
         "outputId": "3daf6d51-d9c8-4fcb-c3ab-2168c92c6354"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1582,7 +1593,7 @@
         "id": "3_OUsr26lDQw",
         "outputId": "d82e0554-3b74-4d1c-a7e2-6cbb75bd498f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1623,7 +1634,7 @@
         "id": "dLifB5EylLZO",
         "outputId": "ef37e89e-26b6-4f7e-8a8c-cbd535c732e4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1687,7 +1698,7 @@
         "id": "bnfb9kTyle1-",
         "outputId": "b0ea3bf4-b97f-420d-ee57-81300eb366fa"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1718,7 +1729,7 @@
       "metadata": {
         "id": "kwE6FKO4mOj3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1733,7 +1744,7 @@
         "id": "wes7nQQemW3r",
         "outputId": "ccec6f6c-0f80-4174-e7e2-f9d37f62f213"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1777,7 +1788,7 @@
         "id": "_2UcJE3vmvZM",
         "outputId": "70ddc5e5-9578-46ac-fcee-9a8c10080fcd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1821,7 +1832,7 @@
         "id": "8XfzDdUHm5nT",
         "outputId": "44739d48-bf96-487e-bd74-2be37d9f4310"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1847,7 +1858,7 @@
         "id": "XkzbXeRynELt",
         "outputId": "b84b4ef1-eb43-4c87-a80f-c957d8958f6f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1897,7 +1908,7 @@
         },
         "outputId": "952fc8af-217d-4139-fc9e-3b1f3b69b414"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1958,7 +1969,7 @@
         "id": "nraW1dv36RAz",
         "outputId": "e445bd6d-56cd-4e9f-afec-3377acff27f8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2068,7 +2079,7 @@
         "id": "XhKoaBE56lbY",
         "outputId": "ad7504cf-988f-4848-c15f-1a05c8afe413"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2107,7 +2118,7 @@
       "metadata": {
         "id": "H9hK17qG7PJ_"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2119,7 +2130,7 @@
       "metadata": {
         "id": "AsoAai2E7Rsf"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2131,7 +2142,7 @@
       "metadata": {
         "id": "bqqhL-Iv7cBF"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2160,7 +2171,7 @@
         "id": "mhP0WycF7e5n",
         "outputId": "e10d3a11-d428-4fba-c402-c7780a1b982e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2193,7 +2204,7 @@
         "id": "Zh4wTyX49AuD",
         "outputId": "9e6f17c9-21b7-4aff-ea77-d6109032586b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2217,7 +2228,7 @@
         "id": "KbQkut9Y9C5p",
         "outputId": "0d7d316d-8d7a-4a4c-f8fd-d641308825b6"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
