--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pratikbanik/ML-Heart-Disease-House-Price-Prediction/blob/main/House_Price_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -45,7 +56,7 @@
       "metadata": {
         "id": "FZUWO7fX5HW1"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +82,7 @@
         "id": "tlzwJ6Je5Y7x",
         "outputId": "d545c79b-317d-49e2-bb9d-54bb2f27474c"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +115,7 @@
         "id": "BYGAmvQz6g3U",
         "outputId": "ba5d8acb-13a5-4dda-cceb-2a29be494ec9"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +498,7 @@
         "id": "oErbkhna6zYB",
         "outputId": "9d58c00e-f2a6-4791-a025-6a7c65af74be"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -859,7 +870,7 @@
         "id": "F3vSyrB066f6",
         "outputId": "e3add025-b2ad-4552-a395-c451a89df84e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,7 +896,7 @@
         "id": "xDOkxUmX6_Qp",
         "outputId": "9bea4a01-8b17-4813-8005-400caf792449"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,7 +939,7 @@
         "id": "jzESAU8J7Mdg",
         "outputId": "af8150c2-8f13-4331-d5c9-b118f1c86863"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +990,7 @@
         "id": "5OnXzrTe7YAI",
         "outputId": "c5d596ee-daf0-4942-9411-cf81078ca515"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,7 +1092,7 @@
       "metadata": {
         "id": "I9efbqtg1YXc"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1108,7 @@
         "id": "2N9QqHO51p4w",
         "outputId": "da00f1c0-28a4-4868-fab1-abb0b8e164c3"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1484,7 +1495,7 @@
         "id": "0ECGToL42snc",
         "outputId": "b4542e96-657f-4919-c15e-b16827b2c2e8"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1534,7 +1545,7 @@
         "id": "sfDh4oAh9Z-_",
         "outputId": "42b2b09c-24b4-4b55-b46c-ecf560a684f7"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1557,7 +1568,7 @@
       "metadata": {
         "id": "qN9hcfoNAV0f"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1574,7 +1585,7 @@
         "id": "ITw208khK-p8",
         "outputId": "fcd257cd-161a-4394-edd7-d3e3ec50da38"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,7 +1651,7 @@
       "metadata": {
         "id": "Rb1ZbaPXLRju"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1676,7 +1687,7 @@
         "id": "djymGqRSLozh",
         "outputId": "69af9440-f4d8-4486-e381-e8f430425f1e"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1712,7 +1723,7 @@
         "id": "c0LPuYi6LyeT",
         "outputId": "33b7e6c1-5839-4d01-846c-ab52bb4551c7"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1762,7 +1773,7 @@
         "id": "CcMJGHOFMQSo",
         "outputId": "daa5b3f0-e57f-4a5c-c83a-5b70d5b5dc00"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1801,7 +1812,7 @@
         "id": "ZyftX24SMerT",
         "outputId": "6f7f7408-41de-41b9-8cf4-1dd8ff1ba38f"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1829,7 +1840,7 @@
         "id": "oHZJ4ht5MqPl",
         "outputId": "bdd5dfd6-1080-4ea8-bfef-9507340ae80d"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1901,7 +1912,7 @@
         "id": "aX_g4LuPM0E7",
         "outputId": "ad7a9e7b-a6a3-421e-f4c0-675ef9577d8e"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2020,7 +2031,7 @@
         "id": "pDwq86lOZ2FM",
         "outputId": "99e02176-f318-480d-c6e1-1232506b0415"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
